welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: not found: value Couleurr
  Couleurr = remplirTableau1(hauteurMonde)
  ^Array2:10: error: not found: value Couleur
      setCouleurBrosse(Couleur(k+decalage%hauteurMonde))
                       ^Array2:18: error: not found: type int
def remplirTableau1(hauteurMonde :int):Array[Color] = {
                                  ^